syntax = "proto3";

package rift;

enum Channel {
    CONTROL = 0;
    INPUT = 1;
    MEDIA = 2;
}

enum Role {
    HOST = 0;
    CLIENT = 1;
}

enum Codec {
    HEVC = 0;
    H264 = 1;
    AV1 = 2;
}

enum Platform {
    LINUX = 0;
    WINDOWS = 1;
    MACOS = 2;
    ANDROID = 3;
    QUEST = 4;
}

message Resolution {
    uint32 width = 1;
    uint32 height = 2;
}

// ========================
// Control Messages
// ========================

message Hello {
    string client_name = 1;
    Platform platform = 2;
    repeated Codec supported_codecs = 3;
    Resolution max_resolution = 4;
    uint32 max_fps = 5;
    uint32 input_caps = 6; // Bitflags
    uint32 protocol_version = 7;
    string public_addr = 8;
}

message HelloAck {
    bool accepted = 1;
    Codec selected_codec = 2;
    Resolution stream_resolution = 3;
    uint32 fps = 4;
    uint32 initial_bitrate_kbps = 5;
    uint32 keyframe_interval_ms = 6;
    bytes session_id = 7; // 16 bytes UUID
    uint32 session_alias = 8; // 4 bytes for optimized transport
    string public_addr = 9;
}

message Ping {
    uint64 timestamp_us = 1;
}

message Pong {
    uint64 timestamp_us = 1;
}

message StatsReport {
    uint32 period_ms = 1;
    uint32 received_packets = 2;
    uint32 lost_packets = 3;
    uint64 rtt_us = 4;
    uint32 jitter_us = 5;
}

message Nack {
    repeated uint64 packet_ids = 1;
}

message EncoderControl {
    uint32 skip_frames = 1;
}

message PoseUpdate {
    uint64 timestamp_us = 1;
    float position_x = 2;
    float position_y = 3;
    float position_z = 4;
    float orientation_x = 5;
    float orientation_y = 6;
    float orientation_z = 7;
    float orientation_w = 8;
}

message VrTiming {
    float refresh_hz = 1;
    int64 vsync_offset_us = 2;
}

message HandPoseUpdate {
    uint64 timestamp_us = 1;
    uint32 hand_id = 2; // 0 = left, 1 = right
    float position_x = 3;
    float position_y = 4;
    float position_z = 5;
    float orientation_x = 6;
    float orientation_y = 7;
    float orientation_z = 8;
    float orientation_w = 9;
    float linear_velocity_x = 10;
    float linear_velocity_y = 11;
    float linear_velocity_z = 12;
    float angular_velocity_x = 13;
    float angular_velocity_y = 14;
    float angular_velocity_z = 15;
}

message CongestionControl {
    uint32 target_bitrate_kbps = 1;
    uint32 target_fps = 2;
}

message ReferenceInvalidation {
    uint64 last_valid_frame_id = 1;
}

message MonitorInfo {
    uint32 id = 1;
    string name = 2;
    uint32 width = 3;
    uint32 height = 4;
}

message MonitorList {
    repeated MonitorInfo monitors = 1;
}

message SelectMonitor {
    uint32 monitor_id = 1;
}

message ClipboardMessage {
    string text = 1;
}

message FileHeader {
    uint64 file_id = 1;
    string filename = 2;
    uint64 file_size = 3;
    string checksum_sha256 = 4;
    uint32 chunk_size = 5;
    uint32 total_chunks = 6;
}

message FileStatus {
    enum Status {
        PENDING = 0;
        IN_PROGRESS = 1;
        COMPLETE = 2;
        ERROR = 3;
    }

    uint64 file_id = 1;
    Status status = 2;
    string message = 3;
}

message LatencyStats {
    uint64 frame_id = 1;
    uint32 capture_us = 2;
    uint32 encode_us = 3;
    uint32 network_us = 4;
    uint32 decode_us = 5;
    uint32 render_us = 6;
    uint32 total_us = 7;
}

message ControlMessage {
    oneof content {
        Hello hello = 1;
        HelloAck hello_ack = 2;
        Ping ping = 3;
        Pong pong = 4;
        StatsReport stats = 5;
        CongestionControl congestion = 6;
        ReferenceInvalidation rfi = 7;
        MonitorList monitor_list = 8;
        SelectMonitor select_monitor = 9;
        Nack nack = 10;
        EncoderControl encoder_control = 11;
        PoseUpdate pose_update = 12;
        VrTiming vr_timing = 13;
        HandPoseUpdate hand_pose_update = 14;
        ClipboardMessage clipboard = 15;
        FileHeader file_header = 16;
        FileStatus file_status = 17;
        LatencyStats latency = 18;
    }
}

// ========================
// Input Messages
// ========================

message MouseMove {
    float x = 1;
    float y = 2;
}

message MouseButton {
    uint32 button = 1;
    bool pressed = 2;
}

message Key {
    uint32 keycode = 1;
    bool pressed = 2;
}

message Scroll {
    float dx = 1;
    float dy = 2;
}

message GamepadAxis {
    uint32 axis = 1;
    float value = 2;
}

message GamepadButton {
    uint32 button = 1;
    bool pressed = 2;
}

message GamepadMessage {
    uint32 gamepad_id = 1;
    repeated GamepadAxis axes = 2;
    repeated GamepadButton buttons = 3;
}

message InputMessage {
    uint64 timestamp_us = 1;
    oneof event {
        MouseMove mouse_move = 2;
        MouseButton mouse_button = 3;
        Key key = 4;
        Scroll scroll = 5;
        GamepadMessage gamepad = 6;
    }
}

// ========================
// Media Messages
// ========================

message VideoChunk {
    uint64 frame_id = 1;
    uint32 chunk_index = 2;
    uint32 chunk_count = 3;
    uint64 timestamp_us = 4;
    bool keyframe = 5;
    bytes payload = 6;
    uint32 capture_us = 7;
    uint32 encode_us = 8;
}

message AudioPacket {
    uint64 timestamp_us = 1;
    bytes payload = 2;
}

message FecPacket {
    uint64 group_id = 1;
    uint64 first_packet_id = 2;
    uint32 shard_count = 3;
    uint32 parity_index = 4;
    bytes payload = 5;
}

message FileChunk {
    uint64 file_id = 1;
    uint32 chunk_index = 2;
    bytes payload = 3;
}

message MediaMessage {
    oneof content {
        VideoChunk video = 1;
        FecPacket fec = 2;
        AudioPacket audio = 3;
        FileChunk file_chunk = 4;
    }
}

// ========================
// Top-Level Message
// ========================

message Message {
    oneof content {
        ControlMessage control = 1;
        InputMessage input = 2;
        MediaMessage media = 3;
    }
}
